WIP      Update launching mechanism. User Python subprocess module on all platforms and not the
         deprecated os.system().

WIP      Log emulator/standalone launcher stdout/stderr into a file. Requires new launching
         mechanism based on subprocess module.

WIP      Advanced fuzzy search engine based on the Levenshtein Distance algortihm, for both
         online and offline scraper.


[B]Advanced Emulator Launcher | version 0.9.5 | XX November 2016[/B]

FEATURE  New command SHOW_ALL_ROMS to render all ROMs in all launchers. Will be used by skins.

FEATURE  Supend/resume Kodi audio engine at launching. This will prevent sound problems in Linux. 
         Include a setting for this in addons "Settings" --> "Advanced".

FEATURE  Export/Import assets/artwork in ROM Collections. Encode binary files in base64 and put
         in an auxiliar JSON files. Exporting assets should be optional, not mandatory.

WIP      Extranafart for Categories/Launchers/ROMs.

WIP      Improve message reporting in Kodi GUI when scanning ROMs.

WIP      Include databases for all supported platforms in AEL offline scraper.

WIP      Every network request must be cached in all online scrapers.

WIP      Improve launcher reports when there is a No-Intro file available.

FEATURE  Deal with Kodi virtual filesystem smb:// paths.

FEATURE  New platform "Microsoft Windows"

FEATURE  Add genre, plot and rating to ROM collections. Unify ROM Collections and Cateogories
         metadata.

FEATURE  Request monospaced font on text viewer dialog (Window 10147).
         
FIX      Fixed searches in launchers.

FIX      Fixed artwork display in ROM Collections (Icon/Fanart/Banner/Poster).

FIX      Fix "launching app not found lnk_launcher_app" error in Windows LNK launchers.

FIX      Remove setContent() old code.

FIX      Fixed the case of removing all categories and having just standalone launcher on addon 
         root.


[B]Advanced Emulator Launcher | version 0.9.4 | 16 October 2016[/B]
